3. No images, or icons, shown in basic tree view.
4. Remove GUI option to control saving of scaled covers. This is enabled by
   default, and can be toggled via the config file.
5. Dont re-load view when sort changes.
6. Simplify view config pages.
7. Use QUrl with server details to build HTTP address used to compare MPD http
   file paths against.
8. Store song ratings in MPD's sticker DB.

1.4.1
-----
1. Remove unused var warning when compiling without online services.
2. Remove some moc/QObject warnings in KDE builds without streams or http
   server.
3. Update current song to scrobble, even if disabled, so that when enabled we
   can scrobble.
4. Seems like MPDSribble itself is broken with regards to sening "love" status,
   so remove MPDScribble from list of scrobblers.

1.4.0
-----
  1. Allow setting of custom device name for UMS and MTP devices.
  2. Allow to use table-view for search results.
  3. Add option to auto-switch to context view X seconds after playback starts,
     and switch back X seconds after stopped.
  4. Add option to auto-scroll lyrics - accessed via context-menu in lyrics
     view.
  5. Use smaller font for sidebar.
  6. Make cover-widget more stylized and smaller.
  7. Move cover-widget next to song details.
  8. Slightly larger play/pause button.
  9. Move position slider in-between controls.
 10. Use system libebur128 if found.
 11. Use smaller font for second line of current song details.
 12. Don't show song details in titlebar - this only duplicates info that is
     already clearly visible in the main window.
 13. Remove space between toolbar and views, and reduce spacing elsewhere.
 14. Use a thin splitter between playqueue and views.
 15. Set 'no interaction' flag on more labels, so that Oxygen's window drag code
     works on these.
 16. Add support for comments. These are read directly from the song file when
     the tag-editor is used, and they are NOT saved in Cantata's cache file.